# IgStrand-Align

./: README.md  pyproject.toml
output/: 1D_mapping_inputigstrand.xlsx  2D_mapping_inputigstrand.xlsx
src/: input.txt  main_script.py
src/igstrand_align/: __init__.py  app.py  cli.py
src/igstrand_align.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/igstrand_align/alignment/: __init__.py  alignment_1d.py  alignment_2d.py  color_rules.py  models.py
src/igstrand_align/core/: __init__.py  config.py  exceptions.py  models.py
src/igstrand_align/domain_detection/: __init__.py  detector.py  icn3d_domain_source.py  models.py
src/igstrand_align/io/: __init__.py  input_reader.py  mapping_repository.py  output_writer_1d.py  output_writer_2d.py  output_writer_2d_svg.py  template_repository.py
src/igstrand_align/numbering/: __init__.py  cache.py  icn3d_refnum_runner.py  models.py  parser.py  service.py
