[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "igstrand-align"
version = "0.1.0"
description = "Bridge IgStrand numbering, 1D alignment, and 2D topology map generation."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "IgStrand-Align contributors" }
]
dependencies = [
  "openpyxl>=3.1",
]

[project.scripts]
igstrand-align = "igstrand_align.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
